Changing parent of object in outliner via drag and drop results in unexpected transformations. #74649

Closed
opened 2020-03-11 12:01:36 +01:00 by Alexander Court · 6 comments

System Information
Operating system: Windows 10
Graphics card: Radeon Vega

Blender Version
Broken: official 2.82
Worked: n.a.

Short description of error
If a object is reparented via outliner the transformation of the original parent is not applied. Maybe this is more an usability issue than a bug, but the behaviour is unexpected (compared to e.g. C4D or Unity).

At the moment reparenting in the outliner works like ALT-P -> Clear Parent. I think at least there should be an option for outliner drag and drop reparenting to keep transformations, like:
Shift-Drag: Reparent
Shift-Alt-Drag: Reparent (Keep Transformation)

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

  1. Open attached .blend file.
  2. Drag object "Cube" in editor and shift-drop object onto "Empty". Cubes global transformation changes.

parenting.blend

**System Information** Operating system: Windows 10 Graphics card: Radeon Vega **Blender Version** Broken: official 2.82 Worked: n.a. **Short description of error** If a object is reparented via outliner the transformation of the original parent is not applied. Maybe this is more an usability issue than a bug, but the behaviour is unexpected (compared to e.g. C4D or Unity). At the moment reparenting in the outliner works like ALT-P -> Clear Parent. I think at least there should be an option for outliner drag and drop reparenting to keep transformations, like: Shift-Drag: Reparent Shift-Alt-Drag: Reparent (Keep Transformation) **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). 1. Open attached .blend file. 2. Drag object "Cube" in editor and shift-drop object onto "Empty". Cubes global transformation changes. [parenting.blend](https://archive.blender.org/developer/F8400560/parenting.blend)

Added subscriber: @spiegelball

Added subscriber: @spiegelball

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 36b55bee42

This issue was referenced by 36b55bee4247565b3e5a7237672bbdc2237447f0
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2020-03-12 11:01:35 +01:00
Member

At the moment reparenting in the outliner works like ALT-P -> Clear Parent

Well, atm., reparenting in the outliner works like Set Parent To > Object. (without the Keep Transform option).
This is more or less intended behavior, but since there is no way to change afterwards, this sounds like an easy enhancement, see D7120: Fix #74649: Outliner: Cannot set/clear parent with 'Keep Transforms'

> At the moment reparenting in the outliner works like ALT-P -> Clear Parent Well, atm., reparenting in the outliner works like `Set Parent To` > `Object`. (without the Keep Transform option). This is more or less intended behavior, but since there is no way to change afterwards, this sounds like an easy enhancement, see [D7120: Fix #74649: Outliner: Cannot set/clear parent with 'Keep Transforms'](https://archive.blender.org/developer/D7120)
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74649
No description provided.